# Learnings-360

NeetCode-250/ArrayHashing/: 13_347_Top_K_Frequent_Elements.py  15_304_Range_Sum_Query_2D_-_Immutable.py  2_217_Contains_Duplicate.py  6_49_Group_Anagrams.py  8_169_Majority_Element.py
Problem-Solving/NeetCode-250/ArrayHashing/: 10_706_Design_HashMap.py  11_912_Sort_an_Array.py  12_75_Sort_Colors.py  16_238_Product_of_Array_Except_Self.py  17_36_Valid_Sudoku.py  18_128_Longest_Consecutive_Sequence.py  19_122_Best_Time_to_Buy_and_Sell_Stock_II.py  (+7 more)
Projects/Analytics-API/: Dockerfile  gettingstarted.md  notes.txt  requirements.txt
Projects/SlideGeneratorAPI/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Projects/SlideGeneratorAPI/app/: config.py  database.py  dependencies.py  main.py
Projects/SlideGeneratorAPI/app/core/: celery.py  config.py  security.py
Projects/SlideGeneratorAPI/app/models/: database_models.py  schemas.py
Projects/SlideGeneratorAPI/app/routes/: auth.py  cache.py  presentations.py
Projects/SlideGeneratorAPI/app/services/: auth_service.py  cache_service.py  database_service.py  image_service.py  llm_service.py  pptx_generator.py  presentation_service.py
Projects/SlideGeneratorAPI/app/tasks/: presentation_tasks.py
Projects/SlideGeneratorAPI/app/utils/: cache.py  concurrent.py  http_client.py  template_loader.py
Projects/SlideGeneratorAPI/migrations/versions/: 001_initial_migration.py
Projects/presentation-generator_v2/: .env  Dockerfile  docker-compose.yml  requirements.txt
Projects/slidegen/: main.py
(+49 files in other folders)
